reviews insertion, bugfixing
